# mssql-mcp

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
dreez_mssql_mcp/: server.py
